JDK17 serial collector.